--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -21,7 +21,47 @@ export const Highlight = ({children, color}) => (
 
 ## AI Native DevX
 
-AI-Native Developer Experience (DevX) focuses on enhancing engineering productivity through the strategic integration of Artificial Intelligence capabilities directly into the developer workflow. A core component of this approach involves leveraging AI-based conversational experiences. These intelligent interfaces are designed to provide immediate, context-aware assistance tailored to individual developer needs and workflows, simplify the discovery and utilization of available services, and surface actionable insights derived from operational data, ultimately fostering a more efficient and empowered development environment.
+AI-Native Developer Experience (DevX) enhances engineering productivity by seamlessly embedding Artificial Intelligence (AI) into the developer workflow. At its core, this approach harnesses AI-powered conversational interfaces that deliver immediate, context-aware support tailored to individual developer needs. These intelligent experiences simplify the discovery and use of internal services, surface actionable insights from operational data, and foster a more empowered, efficient development environment.
+
+This AI-Native DevX offers:
+- A context-aware intelligent assistant embedded throughout the entire software development lifecycle;
+- Intelligent engineering AI agents that execute, compose, and orchestrate tasks by leveraging deep platform context and operational awareness.
+
+###AI Agent Use Cases:
+With the introduction of AI-Native capabilities, we’re unlocking new ways to harness the power of AI within a Platform context. As a use cases, we’re currently offering:
+
+-  **AI Agent for Service Composition:** Leveraging the context of the software catalog, this agent can understand your prompt and suggest a tailored list of existing services, also providing reference architectures. You can then quickly instantiate these services within your projects, streamlining the setup process and accelerating development.
+
+- **AI Agent for Faster Prototyping**: A simple, intuitive interface that helps you write source code and provides a visual preview of what you're building in real time. When combined with the Service Composition AI Agent, it significantly accelerates project setup and prototype development.
+
+- **AI Agent for Debugging**:  Within any project, just type /debug in the Mia-Assistant chat to start exploring insights about your runtime. Make sure the AI Settings toggle is enabled to grant Mia-Assistant access to your project resources. Once activated, you can begin debugging effortlessly using Debug with Mia-Assistant.
+
+### AI-Compliance for Data Catalog: AI-powered Data Discovery
+
+To meet the increasing demand for accessible, reliable, and governance-oriented Data Discovery, the Data Catalog has been enhanced with an AI Assistant. Through a dedicated user interface, users - *especially non-technical roles like Data Protection Officers (DPOs)* - can interact with a chat system to explore metadata and information about data assets (e.g., sensitive data fields) using natural language.
+
+For example, the AI Assistant allows users to ask questions such as:
+
+- "_What categories of personal data are processed?_"
+- "_Who has access to the data? Are they all internal employees or also external consultants?_"
+- "_Is there any data transfer, and if so, where? Within the EU or outside?_"
+- "_Which personal data assets are classified as sensitive under GDPR, and where are they stored?_"
+
+Behind the scenes, the assistant leverages advanced LLM technologies (e.g., Gemini 1.5 Pro / 2.0 Flash) and structured metadata to deliver accurate, human-readable responses. It analyzes datasets, metadata, and governance information to surface well-structured, context-aware answers.
+
+For DPOs, this transforms the Data Catalog from a technical repository into a practical tool for compliance and governance. It enables:
+
+- Transparent, on-demand access to data-related information  
+- Simplified GDPR audit preparation and documentation  
+- Improved collaboration with data owners through a shared, accessible language  
+- Reduced dependency on technical teams, saving time and effort  
+
+Ultimately, this AI-powered integration bridges the gap between legal, compliance, and data teams, making data governance more inclusive, efficient, and effective.
+
+### AI Agents Orchestration with Flow Manager
+The Flow Manager now supports seamless orchestration of AI Agents within end-to-end workflows. This powerful new capability allows users to integrate and coordinate multiple agents, enabling the automation of complex tasks with greater efficiency.
+
+Using the Flow Manager Configurator, organizations can boost operational performance by ensuring AI agents work together intelligently—delivering faster, more accurate outcomes through streamlined collaboration.
 
 ### Clone Microservice repository via Cursor AI IDE 
 
