Apply suggestions from code review
Co-authored-by: Massibian <84580717+Massibian@users.noreply.github.com>

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -89,7 +89,9 @@ Furthermore, the marketplace APIs have been optimized and are now officially pub
 
 ### New Flow Manager Configurator layout
 
-The Flow Manager Configurator layout has been redesigned to provide enhanced control and visibility. Users can now easily view and manage flows, add external executors, and track commands, events, and state transitions, improving the efficiency and flexibility of self-service application management.
+The Flow Manager Configurator layout has been redesigned to provide enhanced control and visibility, especially with the introduction of AI Agents within the sagas (see above). 
+
+We've streamlined the interface to make it easier for users to view and manage flows, integrate external executors, and monitor commands, events, and state transitions, enhancing both the efficiency and flexibility of self-service application management.
 
 ![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
