--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -31,11 +31,11 @@ This AI-Native DevX offers:
 
 With the introduction of AI-Native capabilities, we’re unlocking new ways to harness the power of AI within a Platform context. As a use cases, we’re currently offering:
 
-- **AI Agent for Service Composition:** Leveraging the context of the software catalog, this agent can understand your prompt and suggest a tailored list of existing services, also providing reference architectures. You can then quickly instantiate these services within your projects, streamlining the setup process and accelerating development.
+- **AI Agent for Service Composition:** Leveraging the context of the software catalog, this agent can understand your prompt and suggest a tailored list of existing services, also providing reference architectures. You can then quickly instantiate these services within your Projects, streamlining the setup process and accelerating development.
 
-- **AI Agent for Faster Prototyping**: A simple, intuitive interface that helps you write source code and provides a visual preview of what you're building in real time. When combined with the Service Composition AI Agent, it significantly accelerates project setup and prototype development.
+- **AI Agent for Faster Prototyping**: A simple, intuitive interface that helps you write source code and provides a visual preview of what you're building in real time. When combined with the Service Composition AI Agent, it significantly accelerates Project setup and prototype development.
 
-- **AI Agent for Debugging**:  Within any project, just type /debug in the Mia-Assistant chat to start exploring insights about your runtime. Make sure the AI Settings toggle is enabled to grant Mia-Assistant access to your project resources. Once activated, you can begin debugging effortlessly using Debug with Mia-Assistant.
+- **AI Agent for Debugging**:  Within any Project, just type /debug in the Mia-Assistant chat to start exploring insights about your Runtime. Make sure the AI Settings toggle is enabled to grant Mia-Assistant access to your Project resources. Once activated, you can begin debugging effortlessly using Debug with Mia-Assistant.
 
 ### AI-Compliance for Data Catalog: AI-powered Data Discovery
 
@@ -156,12 +156,6 @@ You can now manage your container registries more effectively within your Projec
 ### Monitor Audit Logs of your Company 
 
 Stay informed and in control with our new Audit Logs feature, designed to provide clear visibility into actions performed across your Company. Effortlessly track and monitor user activities through this powerful and centralized tool. By centralizing these logs, you can significantly enhance security protocols, streamline compliance efforts, and develop a deeper understanding of your Company's operational flow.
-
-bonus ? 
-### Compare different revisions
-### Configuration Saved webhook 
-### Specificy the Rate limit for Endpoints' subroutes
-### Support for custom port and HTTP/2 protocol in Endpoints Configuration
 
 ## Secure Cloud Ops
 
