--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -77,7 +77,7 @@ The Self-Service Application Development paradigm aims to significantly accelera
 
 In v14, we've significantly enhanced the Software Catalog, improving both management and precision. Key updates include comprehensive item schema reviews, ensuring all definitions are standardized, fully documented, and easily accessible to stakeholders. Addiotionally, the manifests for the public items in the Mia-Platform catalog are now publicly available [here](https://github.com/mia-platform-marketplace/public-catalog), offering greater transparency.
 
-### Software Items Lifecycle renewed
+### Software Catalog Items Lifecycle renewed
 
 We've also revamped the **release life cycle** with new stages like `Coming soon`,`Draft`,`Published`,`Maintenance`,`Deprecated`,`Archived`, and `Deleted`. These changes provide a more structured and adaptable framework for managing catalog items, from development to retirement, making the process more efficient and reliable.
 
