added MCP server

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -69,6 +69,10 @@ The Flow Manager now supports seamless orchestration of AI Agents within end-to-
 
 Using the Flow Manager Configurator, organizations can boost operational performance by ensuring AI agents work together intelligently—delivering faster, more accurate outcomes through streamlined collaboration.
 
+### Mia-Platform Console MCP Server
+
+Introducing the new MCP Server for Mia-Platform Console, engineered to enhance how your applications integrate with Large Language Models (LLMs). This feature acts as an intelligent, structured communication layer, following Model Context Protocol principles, allowing you to clearly organize and send instructions, history, tool definitions, and retrieved data to AI models. The MCP Server significantly accelerates the development of AI-driven features, boosts the reliability and accuracy of AI interactions, and seamlessly unlocks advanced capabilities like tool use and RAG, all natively within your Mia-Platform environment. This first version will be able to interact with Console APIs to simplify interactions with the different Console sections through a conversational interface interacting with the MCP Server.
+
 ## Self-service Applications
 
 The Self-Service Application Development paradigm aims to significantly accelerate software delivery timelines. This acceleration is realized through the provision of a Software Catalog, which offers readily available, reusable components, coupled with access to a suite of composable and orchestrated technologies. The entire process operates within a framework of flexible governance, strategically designed to abstract underlying complexities and thereby permit development teams to dedicate their primary focus to the implementation of essential business logic.
