--- a/versioned_docs/version-13.x.x/release-notes/v13.1.0.md
+++ b/versioned_docs/version-13.x.x/release-notes/v13.1.0.md
@@ -40,7 +40,7 @@ If necessary, the new interface documentation can be found directly through the 
 The Enhanced Workflow is now enabled by default when creating new Projects, with the toggle switched on automatically in the Project creation flow.
 
 :::info
-Please note that, starting from **v14.0.0**, new Projects will **exclusively** be created with the Enhanced Workflow, fostering better performances and leveraging features such as GitOps, Custom Orchestrators and quicker configuration save time!
+Please note that, in the next year, new Projects will **exclusively** be created with the Enhanced Workflow, fostering better performances and leveraging features such as GitOps, Custom Orchestrators and quicker configuration save time!
 
 For more information about Enhanced Project Workflow, visit the related [documentation page](/development_suite/set-up-infrastructure/overview.md).
 :::
