--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -7,10 +7,42 @@ image: "img/release-note-link-preview.png"
 
 _May 22th, 2025_
 
-## 
+## Environment centric workflow for Projects (only for Enhanced Projects) &lt;Highlight color="#e5c762">BETA&lt;/Highlight>
 
+We've redesigned environment management in Console, significantly simplifying your Design workflow. The environment is now central, replacing branches. You'll work directly within specific environments across all Console sections, ensuring a consistent and intuitive experience.
 
+For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
 
+## Projects for Infrastructure Provisioning
+
+We've introduced a new Project category for greater control over infrastructure provisioning in the Console. Designed for Operations teams, these specialized Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
+Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
+
+For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
+
+## iframe extensions support login with Console SSO
+
+We've enhanced iframe extensions with unified and secure authentication using Console SSO. Your extensions can now recognize user permissions and manage authentication seamlessly, ensuring only authorized users can access them and improving overall security.
+
+For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
+
+## Console
+
+### Improvements
+
+### Bug Fix
+
+## Fast Data
+
+### Fast Data Services
+
+## Microfrontend Composer
+
+### Back-Kit Library
+
+## Marketplace
+
+### Marketplace Updates
 
 ## How to update your Console
 
