--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -15,7 +15,7 @@ For more information, go to the [documentation](/) and visit [Mia-Platform Conso
 
 ## Projects for Infrastructure Provisioning
 
-We've introduced a new Project category for greater control over infrastructure provisioning in the Console. Designed for Operations teams, these specialized Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
+We've introduced a new Project category for greater control over infrastructure provisioning in Console. Designed for Operations teams, these new type of Projects let you manage infrastructure resources directly, aligning with Infrastructure as Code. You can now easily visualize, manage, and efficiently execute provisioning actions.
 Just create an Infrastructure Project and start provisioning infrastructure to your Developers!
 
 For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
