--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -5,7 +5,7 @@ sidebar_label: v14.0.0
 image: "img/release-note-link-preview.png"
 ---
 
-_May 22th, 2025_
+_May 22nd, 2025_
 
 ## Environment centric workflow for Projects (only for Enhanced Projects) &lt;Highlight color="#e5c762">BETA&lt;/Highlight>
 
