--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -85,6 +85,8 @@ We've streamlined the interface to make it easier for users to view and manage f
 
 ![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
+For a complete overview of the new layout and its features, see the [Flow Manager Configurator documentation](/development_suite/api-console/flow-manager-configurator/overview.md)
+
 ### Clone Microservice repository via Cursor AI IDE 
 
 Now you can easily clone your Microservice repository into the Cursor AI IDE directly from the Mia-Platform Console. This integration provides an easy way to access your service code, enabling a smoother development experience powered by the intelligence of Cursor AI, with support for both `ssh` and `https` protocols.
@@ -126,6 +128,8 @@ In v14, we've significantly enhanced the Software Catalog, improving both manage
 We've also revamped the **release life cycle** with new stages like `Coming soon`,`Draft`,`Published`,`Maintenance`,`Deprecated`,`Archived`, and `Deleted`. These changes provide a more structured and adaptable framework for managing catalog items, from development to retirement, making the process more efficient and reliable.
 
 ![SC new release stages](img/software-catalog-release-stages.png)
+
+To explore all the new features and learn how to manage Software Catalog items, visit the [official documentation](/software-catalog/overview.md)
 
 ### Headless Catalog
 
