--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -39,25 +39,18 @@ With the introduction of AI-Native capabilities, we’re unlocking new ways to h
 
 ### AI-Compliance for Data Catalog: AI-powered Data Discovery
 
-To meet the increasing demand for accessible, reliable, and governance-oriented Data Discovery, the Data Catalog has been enhanced with an AI Assistant. Through a dedicated user interface, users - *especially non-technical roles like Data Protection Officers (DPOs)* - can interact with a chat system to explore metadata and information about data assets (e.g., sensitive data fields) using natural language.
+To meet the increasing demand for accessible, reliable, and governance-oriented Data Discovery, the Data Catalog has been enhanced with an AI Assistant. Through a dedicated user interface, users - *especially non-technical roles like Data Protection Officers (DPOs)* - can interact with a chat to explore all Data Catalog metadata information using natural language.
 
-For example, the AI Assistant allows users to ask questions such as:
+For example, the AI Compliance Assistant allows users to ask:
 
-- "_What categories of personal data are processed?_"
-- "_Who has access to the data? Are they all internal employees or also external consultants?_"
-- "_Is there any data transfer, and if so, where? Within the EU or outside?_"
-- "_Which personal data assets are classified as sensitive under GDPR, and where are they stored?_"
+- *"What categories of personal data are processed?"*
+- *"Who has access to the data? Are they all internal employees or also external consultants?"*
+- *"Is there any data transfer, and if so, where? Within the EU or outside?"*
+- *"Which personal data assets are classified as sensitive under GDPR, and where are they stored?"*
 
-Behind the scenes, the assistant leverages advanced LLM technologies (e.g., Gemini 1.5 Pro / 2.0 Flash) and structured metadata to deliver accurate, human-readable responses. It analyzes datasets, metadata, and governance information to surface well-structured, context-aware answers.
+For DPOs, it enables transparent, on-demand access to data-related information, simplifies GDPR audit preparation and documentation, and reduces dependency on technical teams, saving time and effort.
 
-For DPOs, this transforms the Data Catalog from a technical repository into a practical tool for compliance and governance. It enables:
-
-- Transparent, on-demand access to data-related information  
-- Simplified GDPR audit preparation and documentation  
-- Improved collaboration with data owners through a shared, accessible language  
-- Reduced dependency on technical teams, saving time and effort  
-
-Ultimately, this AI-powered integration bridges the gap between legal, compliance, and data teams, making data governance more inclusive, efficient, and effective.
+This AI-powered integration bridges the gap between legal, compliance, and data teams, making governance more inclusive, efficient, and effective.
 
 ## AI Agent Lifecycle
 
