--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -94,10 +94,10 @@ Mia-Platform Data Catalog introduces **Data Lineage**, a powerful tool for under
 
 ![Data Lineage Overview](img/data-lineage-overview.png)
 
-This feature allows users to explore data relationships at two complementary levels: **Table Lineage** and **System of Record (SoR) Lineage**, providing both granular insights and a holistic overview of data flows.  
+This feature lets users explore data relationships on two complementary levels: **Table Lineage** and **System of Record (SoR) Lineage**, offering both detailed insights and a holistic view of data flows.  
 By offering a detailed visualization of data dependencies and relationships, the **Lineage** view enables users to perform impact analyses, identify potential bottlenecks, and ensure compliance across data workflows.  
-Users can enrich the **Lineage** with **virtual assets** and **jobs**, allowing them to complete relationships not yet automatically retrieved and to clearly describe the context and purpose of each data flow.  
-If you're using **Fast Data Control Plane**, aggregation processes configured within your **Fast Data Projects** are automatically captured, making **Fast Data jobs** directly visible on the **Lineage** canvas.
+Users can enrich the **Lineage** with **virtual assets** and **jobs**, useful to fully describe the context and purpose of each data flow.  
+When using **Fast Data Control Plane**, aggregation processes configured in **Fast Data Projects** can be automatically captured, making **Fast Data jobs** visible on the **Lineage** canvas.
 
 To find out how it works and all the benefits of our Data Lineage solution, please refer to the related [documentation](/data_catalog/frontend/data_lineage.mdx).
 
