Apply suggestions from code review

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -104,10 +104,10 @@ To find out how it works and all the benefits of our Data Lineage solution, plea
 ### Integration Connector Agent
 
 The **Integration Connector Agent** is a modular plugin designed to enable seamless **data integration** between external **sources** and **sinks**.  
-It collects data from external systems, processes and normalizes it, and then sends the data to a defined sink. The Agent supports multiple sources, including **webhooks** from services such as **Mia-Platform Console** and **Jira**, and integrates with **MongoDB** as the current supported sink.  
+It collects data from external systems, maps and processes it, and sends it to a defined sink. Supported ingestion sources include **webhooks** from tools like **Mia-Platform Console** and **Jira**, while **MongoDB** is the currently supported sink.  
 Thanks to its pluggable architecture, it allows easy integration of new sources and sinks with minimal configuration effort.  
 
-By automating data flows and ensuring consistency across platforms, the Integration Connector Agent centralizes data storage, enabling the collection of information from multiple sources and its storage in the target destination. It also facilitates **data synchronization and transformation**, improving data accessibility, streamlining workflows, and supporting more effective reporting and decision-making across systems.
+The Integration Connector Agent enables the collection of information from multiple sources and its storage in a centralized target destination, improving data accessibility, streamlining workflows, and supporting more effective reporting and decision-making across systems.
 
 To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
 
