--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -36,6 +36,23 @@ For more information, go to the [documentation](/) and visit [Mia-Platform Conso
 
 ### Fast Data Services
 
+#### Single View Trigger Generator
+
+The new version `v3.4.1` of the _Single View Trigger Generator_ is available!
+
+##### Fixed
+
+- The service now correctly handles message processing from topics not managed by the control plane, maintaining a resume state and avoiding malfunctioning.
+
+For more information check out the service [changelog](/runtime_suite/single-view-trigger-generator/changelog.md).
+
+## Data Catalog
+
+### MongoDB Connection support in Data Catalog
+
+[Support for MongoDB](/data_catalog/frontend/data_catalog_connections.mdx#mongodb) as a new connection provider has been introduced in Data Catalog. Users can now define a connection string to connect directly to a MongoDB instance. When collections include a MongoDB JSON Schema validation, the agent is able to automatically detect field structures and types.  
+Retrieval of databases and collections can be managed through multiple configuration modes. Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
+
 ## Microfrontend Composer
 
 ### Back-Kit Library
