added extensions with composer new feature

--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -26,6 +26,12 @@ We've enhanced iframe extensions with unified and secure authentication using Co
 
 For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
 
+## Composer extensions can fetch data from Console APIs
+
+Extensions created with the Microfrontend Composer can now retrieve data from the Console via API.
+This makes these Extensions seamlessly integrated with the Console, enabling better customization and fully leveraging the power of the Microfrontend Composer.
+You can already take advantage of this new capability with the new Infrastructure Projects, where these Extensions can be used to display Runtime data of the infrastructure you have deployed.
+
 ## Console
 
 ### Improvements
