--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -111,6 +111,14 @@ The Integration Connector Agent enables the collection of information from multi
 
 To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
 
+### MongoDB connection support in Data Catalog
+
+Data Catalog introduces **MongoDB** as a new natively **supported connection provider**. Once connected, in case a JSON Schema validation is defined on a retrieved collection, Data Catalog can extract field structures and types to ensure accurate metadata management.
+
+Database and collection retrieval behavior can be tailored through multiple configuration modes to better fit user needs.  
+
+To learn more about how to configure it, visit the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb).
+
 ## Platform Engineering enablement
 
 Platform Engineering enablement is fundamentally concerned with establishing clear governance frameworks, which are operationalized through the definition and promotion of standardized 'golden paths' for software delivery processes. This approach empowers development teams by providing structured self-service access to required tools and infrastructure, typically mediated through an Internal Developer Portal (IDP) and managed by a Platform Orchestrator with a significant reduction of cognitive load imposed upon developers, achieved via the effective abstraction of underlying technological and operational complexities.
