add quality assistant

--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -80,6 +80,20 @@ We've streamlined the interface to make it easier for users to view and manage f
 
 For a complete overview of the new layout and its features, see the [Flow Manager Configurator documentation](/development_suite/api-console/flow-manager-configurator/overview.md)
 
+### Quality Assistant for your SDLC
+
+The **Quality Assistant** is the first Software Development Lifecycle (SDLC) tool in Mia-Platform IDP engineered to accelerate and improve the quality of generated assets for the product development in compliance with structured regulatory frameworks. 
+
+Quality Assistant aids in defining your software system requirements and specifications, designing the software product, controlling the implementation through automatic detection of dependencies and vulnerabilities and supporting the verification process. It reduces manual operations for software design, development, release and maintenance, complemented by streamlined documentation. Furthermore, seamless tool integrations provide a single point of access to external information such as Application Lifecycle Management (ALM) data (e.g. Jira). 
+
+Quality Assistant integrates AI-powered features to enhance Design Inputs quality such as requirements and tests, and improving the system test coverage. 
+
+Among the range of supported industries, leveraging our Mia-Care Branch's deep expertise, the first healthcare-tailored solution of Quality Assistant is [P4SaMD](https://docs.mia-care.io/docs/p4samd/overview).
+
+Do you want to learn more about Quality Assistant? Request a Demo [here](https://mia-platform.eu/ask-for-a-demo/).
+
+![Quality Assistant - Software Items overview](img/quality-assistant.png)
+
 ### Clone Microservice repository via Cursor AI IDE 
 
 Now you can easily clone your Microservice repository into the Cursor AI IDE directly from the Mia-Platform Console. This integration provides an easy way to access your service code, enabling a smoother development experience powered by the intelligence of Cursor AI, with support for both `ssh` and `https` protocols.
