--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -80,9 +80,9 @@ We've streamlined the interface to make it easier for users to view and manage f
 
 For a complete overview of the new layout and its features, see the [Flow Manager Configurator documentation](/development_suite/api-console/flow-manager-configurator/overview.md)
 
-### Quality Assistant for your SDLC
+### Quality Assistant for your Software Development Lifecycle
 
-The **Quality Assistant** is the first Software Development Lifecycle (SDLC) tool in Mia-Platform IDP engineered to accelerate and improve the quality of generated assets for the product development in compliance with structured regulatory frameworks. 
+The **Quality Assistant** is the first Software Development Lifecycle tool in Mia-Platform IDP engineered to accelerate and improve the quality of generated assets for the product development in compliance with structured regulatory frameworks. 
 
 Quality Assistant aids in defining your software system requirements and specifications, designing the software product, controlling the implementation through automatic detection of dependencies and vulnerabilities and supporting the verification process. It reduces manual operations for software design, development, release and maintenance, complemented by streamlined documentation. Furthermore, seamless tool integrations provide a single point of access to external information such as Application Lifecycle Management (ALM) data (e.g. Jira). 
 
