--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -90,7 +90,7 @@ Quality Assistant integrates AI-powered features to enhance Design Inputs qualit
 
 Among the range of supported industries, leveraging our Mia-Care Branch's deep expertise, the first healthcare-tailored solution of Quality Assistant is [P4SaMD](https://docs.mia-care.io/docs/p4samd/overview).
 
-Do you want to learn more about Quality Assistant? Request a Demo [here](https://mia-platform.eu/ask-for-a-demo/).
+Do you want to learn more about Quality Assistant? Request a Demo [here](https://mia-platform.eu/ask-for-a-demo/?message=I%E2%80%99m%20interested%20in%20receiving%20more%20detailed%20information%20about%20the%20Quality%20Assistant%20capability%20in%20Mia-Platform%20Console).
 
 ![Quality Assistant - Software Items overview](img/quality-assistant.png)
 
