--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -147,7 +147,7 @@ To explore all the new features and learn how to manage Software Catalog items, 
 
 ### Headless Catalog
 
-Furthermore, the marketplace APIs have been optimized and are now officially published on the API portal, ensuring easy access for all users.
+The Marketplace APIs have been optimized and are now officially published on the API portal, ensuring easy access for all users.
 
 ### Environment centric workflow for Projects (only for Enhanced Projects) <Highlight color="#e5c762">BETA</Highlight>
 
