--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -62,6 +62,8 @@ The Flow Manager now supports seamless orchestration of AI Agents within end-to-
 
 Using the Flow Manager Configurator, organizations can boost operational performance by ensuring AI agents work together intelligently—delivering faster, more accurate outcomes through streamlined collaboration.
 
+![AI Agent orchestration](img/AI-agent-orchestration-with-FM.png)
+
 ### Mia-Platform Console MCP Server
 
 Introducing the new Open Source [MCP Server](https://github.com/mia-platform/console-mcp-server) for Mia-Platform Console, engineered to enhance how your applications integrate with Large Language Models (LLMs). This feature acts as an intelligent, structured communication layer, following Model Context Protocol principles, allowing you to clearly organize and send instructions, history, tool definitions, and retrieved data to AI models. The MCP Server significantly accelerates the development of AI-driven features, boosts the reliability and accuracy of AI interactions, and seamlessly unlocks advanced capabilities like tool use and RAG, all natively within your Mia-Platform environment. This first version will be able to interact with Console APIs to simplify interactions with the different Console sections through a conversational interface interacting with the MCP Server.
