added software catalog uodates

--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -32,6 +32,15 @@ Extensions created with the Microfrontend Composer can now retrieve data from th
 This makes these Extensions seamlessly integrated with the Console, enabling better customization and fully leveraging the power of the Microfrontend Composer.
 You can already take advantage of this new capability with the new Infrastructure Projects, where these Extensions can be used to display Runtime data of the infrastructure you have deployed.
 
+### Enhancing Software Catalog and Release Management
+
+With v14, the **Software Catalog** gets a powerful upgrade. We’ve refined how items are managed and introduced clearer, standardized schemas — fully documented and easily accessible for all through our [official documentation](...).
+
+To boost transparency, manifests for public items in the Mia-Platform catalog are now available [here](https://github.com/mia-platform-marketplace/public-catalog).
+Additionally, each item's manifest can be downloaded directly from its detail page within the Software Catalog.
+
+We’ve also redesigned the release life cycle, adding new stages: `Coming soon`, `Draft`, `Published`, `Maintenance`, `Deprecated`, `Archived`, and `Deleted`. This new structure makes it easier to track and manage catalog items across their entire lifecycle.
+
 ## Console
 
 ### Improvements
@@ -58,10 +67,6 @@ For more information check out the service [changelog](/runtime_suite/single-vie
 
 [Support for MongoDB](/data_catalog/frontend/data_catalog_connections.mdx#mongodb) as a new connection provider has been introduced in Data Catalog. Users can now define a connection string to connect directly to a MongoDB instance. When collections include a MongoDB JSON Schema validation, the agent is able to automatically detect field structures and types.  
 Retrieval of databases and collections can be managed through multiple configuration modes. Check the full list of available options in the [official documentation](/data_catalog/frontend/data_catalog_connections.mdx#mongodb-databases-settings) to configure the behavior according to your needs.
-
-## Microfrontend Composer
-
-### Back-Kit Library
 
 ## Marketplace
 
