--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -153,6 +153,8 @@ The Marketplace APIs have been optimized and are now officially published on the
 
 ### Environment centric workflow for Projects (only for Enhanced Projects) <Highlight color="#e5c762">BETA</Highlight>
 
+![Migration Process](img/migration-process.png)
+
 Mia-Platform Console now features a redesigned environment management system, significantly streamlining your Design workflow. 
 The concept of branches in the Design area has been replaced, with the environment now serving as the central element for each area.   
 Users will work directly within specific environments across all Mia-Platform Console sections, establishing a consistent and intuitive experience and aligning the Design area with the logical structure of other Mia-Platform Console areas.
