added marketplace API deprecation

--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -43,6 +43,13 @@ We’ve also redesigned the release life cycle, adding new stages: `Coming soon`
 
 ## Console
 
+### Marketplace API Deprecation
+
+As of v14, the Marketplace APIs with the `/api/backend/marketplace` prefix are now deprecated.
+We recommend updating any existing integrations to align with the [latest APIs](/) to ensure long-term compatibility and support.
+
+Additionally, it is no longer possible to manage the Marketplace items from the Console CMS, and the `marketplace_CMS` group has been removed.
+
 ### Improvements
 
 ### Bug Fix
