--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -32,7 +32,7 @@ Extensions created with the Microfrontend Composer can now retrieve data from th
 This makes these Extensions seamlessly integrated with the Console, enabling better customization and fully leveraging the power of the Microfrontend Composer.
 You can already take advantage of this new capability with the new Infrastructure Projects, where these Extensions can be used to display Runtime data of the infrastructure you have deployed.
 
-### Enhancing Software Catalog and Release Management
+## Enhancing Software Catalog and Release Management
 
 With v14, the **Software Catalog** gets a powerful upgrade. We’ve refined how items are managed and introduced clearer, standardized schemas — fully documented and easily accessible for all through our [official documentation](...).
 
@@ -41,16 +41,28 @@ Additionally, each item's manifest can be downloaded directly from its detail pa
 
 We’ve also redesigned the release life cycle, adding new stages: `Coming soon`, `Draft`, `Published`, `Maintenance`, `Deprecated`, `Archived`, and `Deleted`. This new structure makes it easier to track and manage catalog items across their entire lifecycle.
 
-## Console
-
-### Marketplace API Deprecation
+## Marketplace API Deprecation
 
 As of v14, the Marketplace APIs with the `/api/backend/marketplace` prefix are now deprecated.
 We recommend updating any existing integrations to align with the [latest APIs](/) to ensure long-term compatibility and support.
 
 Additionally, it is no longer possible to manage the Marketplace items from the Console CMS, and the `marketplace_CMS` group has been removed.
 
+## Console
+
 ### Improvements
+
+#### Export Microservices Environment Variables
+
+You can now export as `.env` file the Environment Variables of your Microservices directly on the related section within the detail of a Microservice!
+
+#### See Project Template's description when creating a Project
+
+From now on, when creating a Project, you can read the description of the Project Template you are selecting.
+
+#### See Project Template used in a Project
+
+Starting from now, each Project will show to the user the name of the Project Template from which the Project has been created. This information will be visibile in the Settings of the Project, within the General tab.
 
 ### Bug Fix
 
