--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -62,7 +62,7 @@ From now on, when creating a Project, you can read the description of the Projec
 
 #### See Project Template used in a Project
 
-Starting from now, each Project will show to the user the name of the Project Template from which the Project has been created. This information will be visibile in the Settings of the Project, within the General tab.
+Starting from now, each Project will show to the user the name of the Project Template from which the Project has been created. This information will be visible in the Settings of the Project, within the General tab.
 
 ### Bug Fix
 
