--- a/docs/release-notes/v13.7.1.md
+++ b/docs/release-notes/v13.7.1.md
@@ -5,7 +5,7 @@ sidebar_label: v13.7.1
 image: "img/release-note-link-preview.png"
 ---
 
-_April 03rd, 2025_
+_April 17th, 2025_
 
 :::info
 
@@ -67,5 +67,5 @@ This releases uses a fixed length of 64 characters for the DICOM UIDs to ensure 
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.1.0-beta.1`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.1.1`.
 
