--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -5,7 +5,16 @@ sidebar_label: v14.0.0
 image: "img/release-note-link-preview.png"
 ---
 
-_May 22nd, 2025_
+_April 22nd, 2025_
+
+:::info
+
+Mia-Platform Console v14.0.0 is **now in Preview** and will be generally available on May 22nd.
+
+Console SaaS users can try out v14.0.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
+
+For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
+:::
 
 ## Environment centric workflow for Projects (only for Enhanced Projects) &lt;Highlight color="#e5c762">BETA&lt;/Highlight>
 
