--- a/docs/release-notes/mia-platform-v14.mdx
+++ b/docs/release-notes/mia-platform-v14.mdx
@@ -80,7 +80,7 @@ We've streamlined the interface to make it easier for users to view and manage f
 
 ![FM Configurator New Layout](img/flow-manager-configurator-new-layout.png)
 
-For a complete overview of the new layout and its features, see the [Flow Manager Configurator documentation](/development_suite/api-console/api-design/flow-manager-configurator/overview.md)
+For a complete overview of the new layout and its features, see the [Flow Manager Configurator documentation](/development_suite/api-console/api-design/flow-manager-configurator/overview.md).
 
 ### Quality Assistant for your Software Development Lifecycle
 
@@ -145,7 +145,7 @@ We've also revamped the **release life cycle** with new stages like `Coming soon
 
 ![SC new release stages](img/software-catalog-release-stages.png)
 
-To explore all the new features and learn how to manage Software Catalog items, visit the [official documentation](/software-catalog/overview.md)
+To explore all the new features and learn how to manage Software Catalog items, visit the [official documentation](/software-catalog/overview.md).
 
 ### Headless Catalog
 
@@ -159,7 +159,7 @@ Mia-Platform Console now features a redesigned environment management system, si
 The concept of branches in the Design area has been replaced, with the environment now serving as the central element for each area.   
 Users will work directly within specific environments across all Mia-Platform Console sections, establishing a consistent and intuitive experience and aligning the Design area with the logical structure of other Mia-Platform Console areas.
 
-### iframe extensions support login with Console SSO
+### Iframe extensions support login with Console SSO
 
 Iframe extensions now benefit from a unified and secure authentication framework using Console Single Sign-On (SSO). This enhancement allows iframe extensions to recognize user permissions and manage authentication and authorization seamlessly. By leveraging Console SSO in your extensions, only authorized users can access and interact with specific iframe extensions, enhancing overall security and control across Mia-Platform Console.
 
