--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -43,7 +43,7 @@ You can already take advantage of this new capability with the new Infrastructur
 
 ## Enhancing Software Catalog and Release Management
 
-With v14, the **Software Catalog** gets a powerful upgrade. We’ve refined how items are managed and introduced clearer, standardized schemas — fully documented and easily accessible for all through our [official documentation](/software-catalog/overview).
+With v14, the **Software Catalog** gets a powerful upgrade. We’ve refined how items are managed and introduced clearer, standardized schemas — fully documented and easily accessible for all through our [official documentation](/software-catalog/overview.md).
 
 To boost transparency, manifests for public items in the Mia-Platform catalog are now available [here](https://github.com/mia-platform-marketplace/public-catalog).
 Additionally, each item's manifest can be downloaded directly from its detail page within the Software Catalog.
@@ -53,7 +53,7 @@ We’ve also redesigned the release life cycle, adding new stages: `Coming soon`
 ## Marketplace API Deprecation
 
 As of v14, the Marketplace APIs with the `/api/backend/marketplace` prefix are now deprecated.
-We recommend updating any existing integrations to align with the [latest APIs](/software-catalog/items-management/api) to ensure long-term compatibility and support.
+We recommend updating any existing integrations to align with the [latest APIs](/software-catalog/items-management/api.md) to ensure long-term compatibility and support.
 
 Additionally, it is no longer possible to manage the Marketplace items from the Console CMS, and the `marketplace_CMS` group has been removed.
 
