--- a/docs/release-notes/v14.0.0.md
+++ b/docs/release-notes/v14.0.0.md
@@ -16,11 +16,13 @@ Console SaaS users can try out v14.0.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Environment centric workflow for Projects (only for Enhanced Projects) &lt;Highlight color="#e5c762">BETA&lt;/Highlight>
+## Environment centric workflow for Projects (only for Enhanced Projects) <Highlight color="#e5c762">BETA</Highlight>
 
 We've redesigned environment management in Console, significantly simplifying your Design workflow. The environment is now central, replacing branches. You'll work directly within specific environments across all Console sections, ensuring a consistent and intuitive experience.
 
-For more information, go to the [documentation](/) and visit [Mia-Platform Console v14 Overview](/).
+![Migration Process](img/migration-process.png)
+
+For more information, go to the [documentation](/development_suite/set-up-infrastructure/env-based-management.md) and visit [Mia-Platform Console v14 Overview](/release-notes/mia-platform-v14.mdx#environment-centric-workflow-for-projects-only-for-enhanced-projects-beta).
 
 ## Projects for Infrastructure Provisioning
 
